chore: COMPASS-4086: top-level debug and other dependency updates (#1896)
* chore: update keytar, kerberos, storage-mixin to latest

* build(deps): Latest mongodb-js/hadron-auto-update-manager#9

* build(deps-dev): ncu -u mocha mock-require sinon sinon-chai xvfb-maybe vscode-windows-registry

* chore: latest agg fixes warnings

* ncu -u hadron-app hadron-compile-cache mongodb-data-service mongodb-query-parser

```
 hadron-app             ^3.2.0  →   ^3.2.1
 hadron-compile-cache   ^2.0.0  →   ^3.0.1
 mongodb-data-service  ^16.5.0  →  ^16.5.1
 mongodb-query-parser   ^2.0.0  →   ^2.0.2
```

* build(deps): getting off our debug fork

* update home and schema validation

 @mongodb-js/compass-home               ^3.0.1  →  ^4.0.0
 @mongodb-js/compass-schema-validation  ^4.0.0  →  ^4.0.2

* :arrow_up: hadron-module-cache@1.0.0

* update dev deps

```
 chai                           ^4.1.2  →        ^4.2.0
 chai-as-promised               ^7.1.0  →        ^7.1.1
 chai-enzyme              1.0.0-beta.0  →  1.0.0-beta.1
 cheerio                   ^1.0.0-rc.2  →   ^1.0.0-rc.3
 cross-env                      ^5.2.0  →        ^7.0.0
 electron-rebuild               ^1.8.8  →       ^1.10.0
 enzyme                         ^3.7.0  →       ^3.11.0
 enzyme-adapter-react-16        ^1.6.0  →       ^1.15.2
 hadron-build                  ^23.1.0  →       ^23.1.1
```

* latest agg and app-stores

* build(deps): remove ampersand-collection-filterable

Its dep is on the intsnace/user/preferences models requires

* build(deps): Remove less-cache top-level

Required on hadron-style-manager

* latest hadron-ipc

* :arrow_up: @mongodb-js/compass-collection-stats @mongodb-js/compass-find-in-page

* :arrow_up: @mongodb-js/compass-query-history

* :arrow_up: @mongodb-js/compass-databases-ddl

* :arrow_up: @mongodb-js/compass-query-bar

* :arrow_up: @mongodb-js/compass-sidebar

* :arrow_up: @mongodb-js/compass-explain-plan

* Update deps


--- a/package.json
+++ b/package.json
@@ -286,41 +286,40 @@
   },
   "dependencies": {
     "@mongodb-js/compass-aggregations": "^6.1.5",
-    "@mongodb-js/compass-app-stores": "^4.0.0",
+    "@mongodb-js/compass-app-stores": "^4.0.2",
     "@mongodb-js/compass-auth-kerberos": "^4.0.0",
     "@mongodb-js/compass-auth-ldap": "^4.0.0",
     "@mongodb-js/compass-auth-x509": "^4.0.0",
     "@mongodb-js/compass-auto-updates": "^2.0.0",
     "@mongodb-js/compass-collection": "^2.0.5",
-    "@mongodb-js/compass-collection-stats": "^5.0.0",
+    "@mongodb-js/compass-collection-stats": "^5.0.3",
     "@mongodb-js/compass-collections-ddl": "^3.0.1",
     "@mongodb-js/compass-connect": "^5.3.3",
-    "@mongodb-js/compass-crud": "^9.0.2",
+    "@mongodb-js/compass-crud": "^9.0.4",
     "@mongodb-js/compass-database": "^1.0.0",
     "@mongodb-js/compass-databases-ddl": "^3.0.2",
     "@mongodb-js/compass-deployment-awareness": "^10.0.0",
     "@mongodb-js/compass-explain-plan": "^4.1.4",
     "@mongodb-js/compass-export-to-language": "^6.0.5",
-    "@mongodb-js/compass-field-store": "^6.0.0",
-    "@mongodb-js/compass-find-in-page": "^2.0.0",
-    "@mongodb-js/compass-home": "^3.0.1",
+    "@mongodb-js/compass-field-store": "^6.0.2",
+    "@mongodb-js/compass-find-in-page": "^2.0.3",
+    "@mongodb-js/compass-home": "^4.0.0",
     "@mongodb-js/compass-import-export": "^5.1.7",
     "@mongodb-js/compass-indexes": "^3.0.8",
-    "@mongodb-js/compass-instance": "^2.0.0",
+    "@mongodb-js/compass-instance": "^2.0.2",
     "@mongodb-js/compass-loading": "^1.0.7",
-    "@mongodb-js/compass-metrics": "^3.0.1",
+    "@mongodb-js/compass-metrics": "^3.0.4",
     "@mongodb-js/compass-plugin-info": "^2.0.0",
-    "@mongodb-js/compass-query-bar": "^6.0.2",
-    "@mongodb-js/compass-query-history": "^7.0.0",
+    "@mongodb-js/compass-query-bar": "^6.0.3",
+    "@mongodb-js/compass-query-history": "^7.0.2",
     "@mongodb-js/compass-schema": "^2.0.8",
     "@mongodb-js/compass-schema-validation": "^4.0.3",
     "@mongodb-js/compass-server-version": "^4.0.0",
     "@mongodb-js/compass-serverstats": "^13.0.0",
-    "@mongodb-js/compass-sidebar": "^3.2.3",
+    "@mongodb-js/compass-sidebar": "^3.2.5",
     "@mongodb-js/compass-ssh-tunnel-status": "^5.0.0",
     "@mongodb-js/compass-status": "^4.0.0",
     "ampersand-collection": "^1.5.0",
-    "ampersand-collection-filterable": "^0.2.1",
     "ampersand-dom-bindings": "^3.7.0",
     "ampersand-model": "^6.0.2",
     "ampersand-rest-collection": "^5.0.0",
@@ -336,30 +335,29 @@
     "compass-user-model": "^0.2.0",
     "d3": "3.5.17",
     "d3-timer": "1.0.7",
-    "debug": "mongodb-js/debug#v2.2.3",
+    "debug": "^4.1.1",
     "debug-menu": "^0.3.0",
     "electron-localshortcut": "^3.1.0",
     "electron-squirrel-startup": "^1.0.0",
     "ensure-error": "^1.0.0",
     "font-awesome": "^4.7.0",
-    "hadron-app": "^3.2.0",
+    "hadron-app": "^3.2.1",
     "hadron-app-registry": "^7.2.0",
-    "hadron-auto-update-manager": "^2.0.0",
-    "hadron-compile-cache": "^2.0.0",
+    "hadron-auto-update-manager": "^3.0.0",
+    "hadron-compile-cache": "^3.0.1",
     "hadron-document": "^6.0.0",
-    "hadron-ipc": "^1.1.0",
-    "hadron-module-cache": "0.0.4",
+    "hadron-ipc": "^1.1.1",
+    "hadron-module-cache": "^1.0.0",
     "hadron-plugin-manager": "^5.3.1",
     "hadron-react-bson": "^3.4.0",
     "hadron-react-buttons": "^3.4.0",
     "hadron-react-components": "^3.5.1",
-    "hadron-style-manager": "^0.1.0",
+    "hadron-style-manager": "^0.3.0",
     "highlight.js": "^8.9.1",
     "jquery": "^2.1.4",
-    "kerberos": "^1.1.2",
-    "keytar": "^5.0.0",
+    "kerberos": "^1.1.3",
+    "keytar": "^5.1.0",
     "less": "^2.6.1",
-    "less-cache": "^0.23.0",
     "local-links": "^1.4.0",
     "lodash": "^3.10.1",
     "marky": "^1.2.0",
@@ -370,8 +368,8 @@
     "mongodb-ace-theme": "^0.0.1",
     "mongodb-ace-theme-query": "^0.0.2",
     "mongodb-collection-model": "^3.1.0",
-    "mongodb-connection-model": "^14.4.3",
-    "mongodb-data-service": "^16.5.0",
+    "mongodb-connection-model": "^14.5.1",
+    "mongodb-data-service": "^16.5.2",
     "mongodb-database-model": "^0.1.3",
     "mongodb-explain-plan-model": "^0.2.3",
     "mongodb-extended-json": "^1.11.0",
@@ -380,7 +378,7 @@
     "mongodb-js-metrics": "^5.0.0",
     "mongodb-language-model": "^1.6.1",
     "mongodb-ns": "^2.2.0",
-    "mongodb-query-parser": "^2.0.0",
+    "mongodb-query-parser": "^2.0.2",
     "mongodb-query-util": "^0.2.1",
     "mongodb-schema": "^8.2.5",
     "mongodb-shell-to-url": "^0.1.0",
@@ -404,7 +402,7 @@
     "reflux": "0.4.1",
     "reflux-state-mixin": "mongodb-js/reflux-state-mixin",
     "semver": "^5.1.0",
-    "storage-mixin": "^3.2.7",
+    "storage-mixin": "^3.3.2",
     "triejs": "github:rueckstiess/triejs",
     "uuid": "^3.0.0"
   },
@@ -412,31 +410,31 @@
     "babel-eslint": "^6.0.4",
     "babel-preset-es2015": "^6.24.0",
     "babel-register": "^6.23.0",
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.0",
-    "chai-enzyme": "1.0.0-beta.0",
-    "cheerio": "^1.0.0-rc.2",
-    "cross-env": "^5.2.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-enzyme": "1.0.0-beta.1",
+    "cheerio": "^1.0.0-rc.3",
+    "cross-env": "^7.0.0",
     "devtron": "^1.4.0",
     "electron": "6.1.7",
     "electron-devtools-installer": "^2.2.4",
-    "electron-rebuild": "^1.8.8",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
+    "electron-rebuild": "^1.10.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint-config-mongodb-js": "^5.0.3",
-    "hadron-build": "^23.0.6",
+    "hadron-build": "^23.1.3",
     "hadron-spectron": "^5.0.0",
     "jsdom": "^9.8.3",
-    "mocha": "^4.1.0",
-    "mock-require": "^2.0.1",
-    "mongodb-js-precommit": "^2.2.0",
+    "mocha": "^7.0.1",
+    "mock-require": "^3.0.3",
+    "mongodb-js-precommit": "^2.2.1",
     "mongodb-runner": "^4.8.0",
-    "sinon": "^1.17.6",
-    "sinon-chai": "^2.8.0",
-    "xvfb-maybe": "^0.1.3"
+    "sinon": "^8.1.1",
+    "sinon-chai": "^3.4.0",
+    "xvfb-maybe": "^0.2.1"
   },
   "optionalDependencies": {
-    "vscode-windows-registry": "1.0.1"
+    "vscode-windows-registry": "1.0.2"
   },
   "engines": {
     "node": "^12.4.0",
