--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
             "node_modules/@mongodb-js/compass-collection",
             "node_modules/@mongodb-js/compass-collections-ddl",
             "node_modules/@mongodb-js/compass-collection-stats",
+            "node_modules/@mongodb-js/compass-community-warning",
             "node_modules/@mongodb-js/compass-connect",
             "node_modules/@mongodb-js/compass-crud",
             "node_modules/@mongodb-js/compass-database",
@@ -294,6 +295,7 @@
     "@mongodb-js/compass-collection": "^2.0.5",
     "@mongodb-js/compass-collection-stats": "^5.0.3",
     "@mongodb-js/compass-collections-ddl": "^3.0.1",
+    "@mongodb-js/compass-community-warning": "^0.0.3",
     "@mongodb-js/compass-connect": "^5.4.4",
     "@mongodb-js/compass-crud": "^9.0.4",
     "@mongodb-js/compass-database": "^1.0.0",
@@ -303,7 +305,7 @@
     "@mongodb-js/compass-export-to-language": "^6.0.5",
     "@mongodb-js/compass-field-store": "^6.0.2",
     "@mongodb-js/compass-find-in-page": "^2.0.3",
-    "@mongodb-js/compass-home": "^4.0.0",
+    "@mongodb-js/compass-home": "^4.1.0",
     "@mongodb-js/compass-import-export": "^5.1.7",
     "@mongodb-js/compass-indexes": "^3.0.8",
     "@mongodb-js/compass-instance": "^2.0.2",
