--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -647,9 +647,7 @@ tasks:
 buildvariants:
   - name: macos
     display_name: MacOS
-    # TODO (@imlucas) Ideally we'd run tests/fanout builds like the other platforms
-    # on `macos-1012` but the setup windowserver" scripting is currently missing on 1012.
-    run_on: osx-1010-compass
+    run_on: macos-1014-codesign
     tasks:
       - name: oneshot-compile-test-package-publish
 
