Add compass shell plugin (#1963)
* Add compass shell plugin, bump compass home version

* Bump compass-aggregations

* Bump mongosh version to 0.0.2-alpha.0

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
             "node_modules/@mongodb-js/compass-schema-validation",
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
+            "node_modules/@mongodb-js/compass-shell",
             "node_modules/@mongodb-js/compass-sidebar",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
             "node_modules/@mongodb-js/compass-status",
@@ -110,6 +111,7 @@
             "node_modules/@mongodb-js/compass-plugin-info",
             "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-server-version",
+            "node_modules/@mongodb-js/compass-shell",
             "node_modules/@mongodb-js/compass-sidebar",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
             "node_modules/@mongodb-js/compass-status",
@@ -157,6 +159,7 @@
             "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
+            "node_modules/@mongodb-js/compass-shell",
             "node_modules/@mongodb-js/compass-sidebar",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
             "node_modules/@mongodb-js/compass-status",
@@ -202,6 +205,7 @@
             "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
+            "node_modules/@mongodb-js/compass-shell",
             "node_modules/@mongodb-js/compass-sidebar",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
             "node_modules/@mongodb-js/compass-status",
@@ -286,7 +290,7 @@
     "url": "git://github.com/mongodb-js/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-aggregations": "^7.1.2",
+    "@mongodb-js/compass-aggregations": "^7.1.3",
     "@mongodb-js/compass-app-stores": "^4.0.2",
     "@mongodb-js/compass-auth-kerberos": "^4.0.1",
     "@mongodb-js/compass-auth-ldap": "^4.0.1",
@@ -305,7 +309,7 @@
     "@mongodb-js/compass-export-to-language": "^6.0.6",
     "@mongodb-js/compass-field-store": "^6.0.3",
     "@mongodb-js/compass-find-in-page": "^2.0.4",
-    "@mongodb-js/compass-home": "^4.1.1",
+    "@mongodb-js/compass-home": "^4.2.0",
     "@mongodb-js/compass-import-export": "^5.1.18",
     "@mongodb-js/compass-indexes": "^3.0.9",
     "@mongodb-js/compass-instance": "^2.0.3",
@@ -318,6 +322,7 @@
     "@mongodb-js/compass-schema-validation": "^4.0.5",
     "@mongodb-js/compass-server-version": "^4.0.1",
     "@mongodb-js/compass-serverstats": "^14.0.0",
+    "@mongodb-js/compass-shell": "^0.0.2-alpha.0",
     "@mongodb-js/compass-sidebar": "^3.2.6",
     "@mongodb-js/compass-ssh-tunnel-status": "^5.0.1",
     "@mongodb-js/compass-status": "^4.0.1",
