--- a/packages/compass/package.json
+++ b/packages/compass/package.json
@@ -155,8 +155,10 @@
     "generate-3rd-party-notices": "mongodb-sbom-tools generate-3rd-party-notices --product='Mongodb Compass' --dependencies=../../.sbom/dependencies.json > THIRD-PARTY-NOTICES.md",
     "postgenerate-3rd-party-notices": "prettier --write THIRD-PARTY-NOTICES.md",
     "run-compiled": "electron .",
-    "package-compass": "hadron-build release",
-    "package-compass-debug": "DEBUG='*' HADRON_SKIP_INSTALLER=true NO_ASAR=true hadron-build release",
+    "package-compass-nocompile": "hadron-build release",
+    "prepackage-compass": "npm run compile",
+    "package-compass": "npm run package-compass-nocompile",
+    "package-compass-debug": "DEBUG='*' HADRON_SKIP_INSTALLER=true NO_ASAR=true npm run package-compass",
     "upload": "hadron-build upload",
     "download": "hadron-build download",
     "evergreen-expansions": "hadron-build info --format=yaml --flatten > expansions.yml",
