--- a/packages/hadron-build/package.json
+++ b/packages/hadron-build/package.json
@@ -27,7 +27,7 @@
     "@npmcli/arborist": "^6.2.0",
     "@octokit/rest": "^18.6.2",
     "asar": "^3.0.3",
-    "bluebird": "^3.7.2",
+    "async": "^3.2.2",
     "chalk": "^4.1.2",
     "cli-table": "^0.3.1",
     "debug": "^4.3.4",
