--- a/packages/compass-crud/package.json
+++ b/packages/compass-crud/package.json
@@ -99,6 +99,8 @@
     "mongodb-query-parser": "^4.1.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.6",
     "reflux": "^0.4.1",
     "semver": "^7.6.2"
   },
