fix(deps): bump query-parser, ejson-shell-parser →shell-bson-parser COMPASS-4655

--- a/packages/compass-crud/package.json
+++ b/packages/compass-crud/package.json
@@ -88,7 +88,7 @@
     "ag-grid-react": "^20.2.0",
     "bson": "^6.7.0",
     "compass-preferences-model": "^2.24.0",
-    "ejson-shell-parser": "^2.0.1",
+    "@mongodb-js/shell-bson-parser": "^1.1.0",
     "hadron-app-registry": "^9.2.0",
     "hadron-document": "^8.5.4",
     "hadron-type-checker": "^7.2.2",
@@ -96,7 +96,7 @@
     "lodash": "^4.17.21",
     "mongodb-data-service": "^22.22.0",
     "mongodb-ns": "^2.4.2",
-    "mongodb-query-parser": "^4.1.2",
+    "mongodb-query-parser": "^4.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "reflux": "^0.4.1",
