--- a/packages/compass-aggregations/package.json
+++ b/packages/compass-aggregations/package.json
@@ -79,7 +79,7 @@
     "@mongodb-js/my-queries-storage": "^0.12.0",
     "bson": "^6.7.0",
     "compass-preferences-model": "^2.24.0",
-    "ejson-shell-parser": "^2.0.1",
+    "@mongodb-js/shell-bson-parser": "^1.1.0",
     "hadron-app-registry": "^9.2.0",
     "hadron-document": "^8.5.4",
     "hadron-type-checker": "^7.2.2",
@@ -90,7 +90,7 @@
     "mongodb-database-model": "^2.22.0",
     "mongodb-instance-model": "^12.23.0",
     "mongodb-ns": "^2.4.2",
-    "mongodb-query-parser": "^4.1.2",
+    "mongodb-query-parser": "^4.2.0",
     "mongodb-schema": "^12.2.0",
     "prop-types": "^15.7.2",
     "re-resizable": "^6.9.0",
