--- a/packages/compass-export-to-language/package.json
+++ b/packages/compass-export-to-language/package.json
@@ -56,7 +56,7 @@
     "@mongodb-js/compass-telemetry": "^1.1.0",
     "bson-transpilers": "^3.0.4",
     "compass-preferences-model": "^2.24.0",
-    "ejson-shell-parser": "^2.0.1",
+    "@mongodb-js/shell-bson-parser": "^1.1.0",
     "hadron-app-registry": "^9.2.0",
     "mongodb-ns": "^2.4.2",
     "react": "^17.0.2",
