--- a/packages/compass-indexes/package.json
+++ b/packages/compass-indexes/package.json
@@ -80,12 +80,12 @@
     "@mongodb-js/mongodb-constants": "^0.10.0",
     "bson": "^6.7.0",
     "compass-preferences-model": "^2.24.0",
-    "ejson-shell-parser": "^2.0.1",
+    "@mongodb-js/shell-bson-parser": "^1.1.0",
     "hadron-app-registry": "^9.2.0",
     "lodash": "^4.17.21",
     "mongodb": "^6.7.0",
     "mongodb-data-service": "^22.22.0",
-    "mongodb-query-parser": "^4.1.2",
+    "mongodb-query-parser": "^4.2.0",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-redux": "^8.1.3",
