--- a/configs/webpack-config-compass/package.json
+++ b/configs/webpack-config-compass/package.json
@@ -76,6 +76,7 @@
     "css-loader": "^4.3.0",
     "electron": "^29.4.3",
     "html-webpack-plugin": "^5.3.2",
+    "less": "^3.13.1",
     "less-loader": "^10.0.1",
     "mini-css-extract-plugin": "^2.3.0",
     "node-loader": "^2.0.0",
