--- a/packages/compass-workspaces/package.json
+++ b/packages/compass-workspaces/package.json
@@ -51,6 +51,7 @@
     "reformat": "npm run eslint . -- --fix && npm run prettier -- --write ."
   },
   "dependencies": {
+    "compass-preferences-model": "^2.25.0",
     "@mongodb-js/compass-app-stores": "^7.22.0",
     "@mongodb-js/compass-components": "^1.28.0",
     "@mongodb-js/compass-connections": "^1.36.0",
@@ -67,6 +68,7 @@
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
+    "@mongodb-js/connection-storage": "^0.16.0",
     "@mongodb-js/eslint-config-compass": "^1.1.3",
     "@mongodb-js/mocha-config-compass": "^1.3.9",
     "@mongodb-js/prettier-config-compass": "^1.0.2",
