fix(deps): bump query-parser, ejson-shell-parser → shell-bson-parser COMPASS-4655 (#6025)

--- a/packages/compass-aggregations/package.json
+++ b/packages/compass-aggregations/package.json
@@ -77,9 +77,9 @@
     "@mongodb-js/explain-plan-helper": "^1.1.14",
     "@mongodb-js/mongodb-constants": "^0.10.0",
     "@mongodb-js/my-queries-storage": "^0.13.0",
+    "@mongodb-js/shell-bson-parser": "^1.1.0",
     "bson": "^6.7.0",
     "compass-preferences-model": "^2.25.0",
-    "ejson-shell-parser": "^2.0.1",
     "hadron-app-registry": "^9.2.1",
     "hadron-document": "^8.5.5",
     "hadron-type-checker": "^7.2.2",
@@ -90,7 +90,7 @@
     "mongodb-database-model": "^2.22.1",
     "mongodb-instance-model": "^12.23.1",
     "mongodb-ns": "^2.4.2",
-    "mongodb-query-parser": "^4.1.2",
+    "mongodb-query-parser": "^4.2.0",
     "mongodb-schema": "^12.2.0",
     "prop-types": "^15.7.2",
     "re-resizable": "^6.9.0",
