--- a/packages/compass-crud/package.json
+++ b/packages/compass-crud/package.json
@@ -84,11 +84,11 @@
     "@mongodb-js/explain-plan-helper": "^1.1.14",
     "@mongodb-js/my-queries-storage": "^0.13.0",
     "@mongodb-js/reflux-state-mixin": "^1.0.3",
+    "@mongodb-js/shell-bson-parser": "^1.1.0",
     "ag-grid-community": "^20.2.0",
     "ag-grid-react": "^20.2.0",
     "bson": "^6.7.0",
     "compass-preferences-model": "^2.25.0",
-    "ejson-shell-parser": "^2.0.1",
     "hadron-app-registry": "^9.2.1",
     "hadron-document": "^8.5.5",
     "hadron-type-checker": "^7.2.2",
@@ -96,7 +96,7 @@
     "lodash": "^4.17.21",
     "mongodb-data-service": "^22.22.1",
     "mongodb-ns": "^2.4.2",
-    "mongodb-query-parser": "^4.1.2",
+    "mongodb-query-parser": "^4.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "reflux": "^0.4.1",
