--- a/packages/compass-export-to-language/package.json
+++ b/packages/compass-export-to-language/package.json
@@ -54,9 +54,9 @@
     "@mongodb-js/compass-editor": "^0.27.0",
     "@mongodb-js/compass-maybe-protect-connection-string": "^0.23.0",
     "@mongodb-js/compass-telemetry": "^1.1.1",
+    "@mongodb-js/shell-bson-parser": "^1.1.0",
     "bson-transpilers": "^3.0.5",
     "compass-preferences-model": "^2.25.0",
-    "ejson-shell-parser": "^2.0.1",
     "hadron-app-registry": "^9.2.1",
     "mongodb-ns": "^2.4.2",
     "react": "^17.0.2",
