--- a/packages/connection-form/package.json
+++ b/packages/connection-form/package.json
@@ -50,14 +50,14 @@
     "@mongodb-js/compass-components": "^1.28.0",
     "@mongodb-js/compass-editor": "^0.27.0",
     "@mongodb-js/connection-info": "^0.5.1",
+    "@mongodb-js/shell-bson-parser": "^1.1.0",
     "compass-preferences-model": "^2.25.0",
-    "ejson-shell-parser": "^2.0.1",
     "lodash": "^4.17.21",
     "mongodb": "^6.7.0",
     "mongodb-build-info": "^1.7.2",
     "mongodb-connection-string-url": "^3.0.1",
     "mongodb-data-service": "^22.22.1",
-    "mongodb-query-parser": "^4.1.2",
+    "mongodb-query-parser": "^4.2.0",
     "react": "^17.0.2"
   },
   "devDependencies": {
