--- a/.evergreen/buildvariants-and-tasks.yml
+++ b/.evergreen/buildvariants-and-tasks.yml
@@ -351,6 +351,7 @@ tasks:
           e2e_test_groups: 3
           e2e_test_group: 1
           debug: compass-e2e-tests*,electron*,hadron*,mongo*
+          mongodb_version: latest-enterprise
   - name: e2e-multiple-connections-2
     tags:
       - required-for-publish
@@ -364,6 +365,7 @@ tasks:
           e2e_test_groups: 3
           e2e_test_group: 2
           debug: compass-e2e-tests*,electron*,hadron*,mongo*
+          mongodb_version: latest-enterprise
   - name: e2e-multiple-connections-3
     tags:
       - required-for-publish
@@ -377,6 +379,7 @@ tasks:
           e2e_test_groups: 3
           e2e_test_group: 3
           debug: compass-e2e-tests*,electron*,hadron*,mongo*
+          mongodb_version: latest-enterprise
   - name: generate-vulnerability-report
     tags:
       - required-for-publish
@@ -1542,7 +1545,7 @@ tasks:
           compass_distribution: compass
       - func: test-packaged-app
         vars:
-          mongodb_version: latest
+          mongodb_version: latest-enterprise
           compass_distribution: compass
           e2e_test_groups: 3
           e2e_test_group: 1
@@ -1565,7 +1568,7 @@ tasks:
           compass_distribution: compass
       - func: test-packaged-app
         vars:
-          mongodb_version: latest
+          mongodb_version: latest-enterprise
           compass_distribution: compass
           e2e_test_groups: 3
           e2e_test_group: 2
@@ -1588,7 +1591,7 @@ tasks:
           compass_distribution: compass
       - func: test-packaged-app
         vars:
-          mongodb_version: latest
+          mongodb_version: latest-enterprise
           compass_distribution: compass
           e2e_test_groups: 3
           e2e_test_group: 3
@@ -1608,7 +1611,7 @@ tasks:
           compass_distribution: compass
       - func: test-web-sandbox
         vars:
-          mongodb_version: latest
+          mongodb_version: latest-enterprise
           browser_name: chrome
           compass_distribution: compass
           e2e_test_groups: 3
@@ -1629,7 +1632,7 @@ tasks:
           compass_distribution: compass
       - func: test-web-sandbox
         vars:
-          mongodb_version: latest
+          mongodb_version: latest-enterprise
           browser_name: chrome
           compass_distribution: compass
           e2e_test_groups: 3
@@ -1650,7 +1653,7 @@ tasks:
           compass_distribution: compass
       - func: test-web-sandbox
         vars:
-          mongodb_version: latest
+          mongodb_version: latest-enterprise
           browser_name: chrome
           compass_distribution: compass
           e2e_test_groups: 3
@@ -1671,7 +1674,7 @@ tasks:
           compass_distribution: compass
       - func: test-web-sandbox
         vars:
-          mongodb_version: latest
+          mongodb_version: latest-enterprise
           browser_name: firefox
           compass_distribution: compass
           e2e_test_groups: 3
@@ -1692,7 +1695,7 @@ tasks:
           compass_distribution: compass
       - func: test-web-sandbox
         vars:
-          mongodb_version: latest
+          mongodb_version: latest-enterprise
           browser_name: firefox
           compass_distribution: compass
           e2e_test_groups: 3
@@ -1713,7 +1716,7 @@ tasks:
           compass_distribution: compass
       - func: test-web-sandbox
         vars:
-          mongodb_version: latest
+          mongodb_version: latest-enterprise
           browser_name: firefox
           compass_distribution: compass
           e2e_test_groups: 3
