--- a/packages/compass-welcome/package.json
+++ b/packages/compass-welcome/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@mongodb-js/compass-components": "^1.28.1",
+    "@mongodb-js/compass-connections": "^1.36.0",
     "@mongodb-js/compass-logging": "^1.4.2",
     "@mongodb-js/compass-telemetry": "^1.1.2",
     "@mongodb-js/compass-workspaces": "^0.18.0",
