fix(connections): add missing dependency

--- a/packages/compass-connections/package.json
+++ b/packages/compass-connections/package.json
@@ -58,6 +58,7 @@
     "@mongodb-js/compass-utils": "^0.6.7",
     "@mongodb-js/connection-form": "^1.35.0",
     "@mongodb-js/connection-info": "^0.5.2",
+    "@mongodb-js/connection-storage": "^0.16.1",
     "bson": "^6.7.0",
     "compass-preferences-model": "^2.25.1",
     "hadron-app-registry": "^9.2.1",
