chore: fix dependencies

--- a/packages/compass-crud/package.json
+++ b/packages/compass-crud/package.json
@@ -55,6 +55,8 @@
     "@mongodb-js/tsconfig-compass": "^1.0.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.5",
     "@types/reflux": "^6.4.3",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
@@ -78,14 +80,13 @@
     "@mongodb-js/compass-editor": "^0.28.0",
     "@mongodb-js/compass-field-store": "^9.12.0",
     "@mongodb-js/compass-logging": "^1.4.2",
-    "@mongodb-js/compass-telemetry": "^1.1.2",
     "@mongodb-js/compass-query-bar": "^8.38.0",
+    "@mongodb-js/compass-telemetry": "^1.1.2",
     "@mongodb-js/compass-workspaces": "^0.18.0",
     "@mongodb-js/explain-plan-helper": "^1.1.14",
     "@mongodb-js/my-queries-storage": "^0.14.0",
     "@mongodb-js/reflux-state-mixin": "^1.0.3",
     "@mongodb-js/shell-bson-parser": "^1.1.0",
-    "@tanstack/react-virtual": "^3.8.3",
     "ag-grid-community": "^20.2.0",
     "ag-grid-react": "^20.2.0",
     "bson": "^6.7.0",
@@ -100,7 +101,8 @@
     "mongodb-query-parser": "^4.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-virtuoso": "^4.7.12",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.6",
     "reflux": "^0.4.1",
     "semver": "^7.6.2"
   },
