--- a/packages/compass/.depcheckrc
+++ b/packages/compass/.depcheckrc
@@ -11,6 +11,7 @@ ignores: [
     'win-export-certificate-and-key',
     'macos-export-certificate-and-key',
     'mongodb-client-encryption',
+    'interruptor',
     # webpack always externalizes 'clipboard' for legacy reasons
     'clipboard'
   ]
