--- a/packages/explain-plan-helper/package.json
+++ b/packages/explain-plan-helper/package.json
@@ -49,6 +49,7 @@
     "reformat": "npm run eslint . -- --fix && npm run prettier -- --write ."
   },
   "dependencies": {
+    "@mongodb-js/shell-bson-parser": "^1.1.0",
     "mongodb-explain-compat": "^3.0.4"
   },
   "devDependencies": {
