--- a/packages/compass-components/package.json
+++ b/packages/compass-components/package.json
@@ -89,6 +89,7 @@
     "react": "^17.0.2",
     "react-hotkeys-hook": "^4.3.7",
     "react-intersection-observer": "^8.34.0",
+    "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.6"
   },
   "devDependencies": {
