--- a/packages/compass-workspaces/package.json
+++ b/packages/compass-workspaces/package.json
@@ -55,6 +55,7 @@
     "@mongodb-js/compass-components": "^1.28.1",
     "@mongodb-js/compass-connections": "^1.37.0",
     "@mongodb-js/compass-logging": "^1.4.2",
+    "compass-preferences-model": "^2.25.1",
     "bson": "^6.7.0",
     "hadron-app-registry": "^9.2.1",
     "lodash": "^4.17.21",
