--- a/packages/compass-preferences-model/package.json
+++ b/packages/compass-preferences-model/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@mongodb-js/compass-logging": "^1.4.2",
     "@mongodb-js/compass-user-data": "^0.3.2",
+    "@mongodb-js/devtools-proxy-support": "^0.3.2",
     "bson": "^6.7.0",
     "hadron-app-registry": "^9.2.1",
     "hadron-ipc": "^3.2.19",
