chore(ci): Setup Search Index e2e tests with local atlas COMPASS-7255 (#5954)
* chore(ci): Setup Search Index e2e tests with local atlas COMPASS-7255

* unskip search index tests

* don't throw on exit

* skip when no docker, setup on packaged app

* only run for e2e-coverage

* fix regular indexes test

* fix connection name

---------

Co-authored-by: Basit Chonka <basit.chonka@mongodb.com>
Co-authored-by: Basit <1305718+mabaasit@users.noreply.github.com>

--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -589,10 +589,14 @@ functions:
           MONGODB_RUNNER_VERSION: ${mongodb_version|}
           E2E_TEST_GROUPS: ${e2e_test_groups}
           E2E_TEST_GROUP: ${e2e_test_group}
+          ATLAS_LOCAL_VERSION: latest
         script: |
           set -e
           # Load environment variables
           eval $(.evergreen/print-compass-env.sh)
+
+          # Start atlas local to test Atlas Search
+          source .evergreen/start-atlas-local.sh
 
           echo "Running E2E tests while collecting coverage..."
 
