fixup: docker file version management suggestion

--- a/.evergreen/connectivity-tests/Dockerfile
+++ b/.evergreen/connectivity-tests/Dockerfile
@@ -1,5 +1,6 @@
 # "bullseye" is the debian distribution that ubuntu:20.04 is based on
-FROM node:20-bullseye
+ARG NODE_JS_VERSION=20
+FROM node:${NODE_JS_VERSION}-bullseye
 
 COPY .evergreen/connectivity-tests/krb5.conf /etc/krb5.conf
 
