--- a/packages/compass-workspaces/package.json
+++ b/packages/compass-workspaces/package.json
@@ -55,6 +55,7 @@
     "@mongodb-js/compass-components": "^1.28.1",
     "@mongodb-js/compass-connections": "^1.37.0",
     "@mongodb-js/compass-logging": "^1.4.2",
+    "compass-preferences-model": "^2.25.1",
     "bson": "^6.7.0",
     "hadron-app-registry": "^9.2.1",
     "lodash": "^4.17.21",
@@ -70,6 +71,7 @@
     "@mongodb-js/eslint-config-compass": "^1.1.3",
     "@mongodb-js/mocha-config-compass": "^1.3.9",
     "@mongodb-js/prettier-config-compass": "^1.0.2",
+    "@mongodb-js/connection-storage": "^0.16.1",
     "@mongodb-js/tsconfig-compass": "^1.0.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "^7.0.2",
