fixup: scope moduleResolution: node16 to only compass-preferences-model

--- a/configs/tsconfig-compass/tsconfig.common.json
+++ b/configs/tsconfig-compass/tsconfig.common.json
@@ -1,6 +1,3 @@
 {
-  "extends": "@mongodb-js/tsconfig-devtools/tsconfig.common.json",
-  "compilerOptions": {
-    "moduleResolution": "node16"
-  }
+  "extends": "@mongodb-js/tsconfig-devtools/tsconfig.common.json"
 }
