--- a/packages/compass-preferences-model/tsconfig.json
+++ b/packages/compass-preferences-model/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "@mongodb-js/tsconfig-compass/tsconfig.common.json",
   "compilerOptions": {
     "outDir": "dist",
-    "allowJs": true
+    "allowJs": true,
+    "moduleResolution": "node16"
   },
   "include": ["src/**/*"],
   "exclude": ["./src/**/*.spec.*"]
