--- a/packages/atlas-service/package.json
+++ b/packages/atlas-service/package.json
@@ -79,17 +79,16 @@
     "@mongodb-js/compass-user-data": "^0.3.3",
     "@mongodb-js/compass-utils": "^0.6.9",
     "@mongodb-js/devtools-connect": "^3.2.5",
+    "@mongodb-js/devtools-proxy-support": "^0.3.5",
     "@mongodb-js/oidc-plugin": "^1.0.0",
     "hadron-app-registry": "^9.2.2",
     "compass-preferences-model": "^2.26.0",
     "electron": "^29.4.5",
     "hadron-ipc": "^3.2.20",
     "lodash": "^4.17.21",
-    "node-fetch": "^2.7.0",
     "react": "^17.0.2",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "system-ca": "^2.0.0"
+    "redux-thunk": "^2.4.2"
   }
 }
