--- a/packages/compass/package.json
+++ b/packages/compass/package.json
@@ -181,11 +181,11 @@
     "email": "compass@mongodb.com"
   },
   "dependencies": {
-    "@mongosh/node-runtime-worker-thread": "^2.2.15",
+    "@mongosh/node-runtime-worker-thread": "^2.3.0",
     "clipboard": "^2.0.6",
     "kerberos": "^2.1.1",
     "keytar": "^7.9.0",
-    "mongodb-client-encryption": "^6.0.0",
+    "mongodb-client-encryption": "6.0.0",
     "os-dns-native": "^1.2.1",
     "system-ca": "^2.0.0"
   },
