--- a/packages/data-service/package.json
+++ b/packages/data-service/package.json
@@ -53,7 +53,7 @@
   "dependencies": {
     "@mongodb-js/compass-logging": "^1.4.3",
     "@mongodb-js/compass-utils": "^0.6.9",
-    "@mongodb-js/devtools-connect": "^3.0.1",
+    "@mongodb-js/devtools-connect": "^3.2.5",
     "@mongodb-js/ssh-tunnel": "^2.3.3",
     "bson": "^6.7.0",
     "lodash": "^4.17.21",
@@ -85,6 +85,6 @@
     "typescript": "^5.0.4"
   },
   "optionalDependencies": {
-    "mongodb-client-encryption": "^6.0.0"
+    "mongodb-client-encryption": "6.0.0"
   }
 }
