feat: add per-connection proxy settings COMPASS-8142
- Remove the `ssh-tunnel` package from Compass and its usage from
  data-service
- Add relevant fields to the connection form and integrate them
  into data-service

--- a/packages/data-service/package.json
+++ b/packages/data-service/package.json
@@ -54,8 +54,9 @@
     "@mongodb-js/compass-logging": "^1.4.3",
     "@mongodb-js/compass-utils": "^0.6.9",
     "@mongodb-js/devtools-connect": "^3.2.5",
-    "@mongodb-js/ssh-tunnel": "^2.3.3",
+    "@mongodb-js/devtools-proxy-support": "^0.3.5",
     "bson": "^6.7.0",
+    "compass-preferences-model": "^2.26.0",
     "lodash": "^4.17.21",
     "mongodb": "^6.8.0",
     "mongodb-build-info": "^1.7.2",
