--- a/.evergreen/buildvariants-and-tasks.yml
+++ b/.evergreen/buildvariants-and-tasks.yml
@@ -220,13 +220,13 @@ buildvariants:
       - name: e2e-coverage-1
       - name: e2e-coverage-2
       - name: e2e-coverage-3
-  - name: e2e-multiple-connections
+  - name: e2e-single-connection
     display_name: E2E Multiple Connections
     run_on: ubuntu2004-large
     tasks:
-      - name: e2e-multiple-connections-1
-      - name: e2e-multiple-connections-2
-      - name: e2e-multiple-connections-3
+      - name: e2e-single-connection-1
+      - name: e2e-single-connection-2
+      - name: e2e-single-connection-3
   - name: csfle-tests
     display_name: CSFLE Tests
     run_on: ubuntu2004-large
@@ -338,7 +338,7 @@ tasks:
           e2e_test_groups: 3
           e2e_test_group: 3
           debug: compass-e2e-tests*,electron*,hadron*,mongo*
-  - name: e2e-multiple-connections-1
+  - name: e2e-single-connection-1
     tags:
       - required-for-publish
       - run-on-pr
@@ -346,13 +346,13 @@ tasks:
       - func: prepare
       - func: install
       - func: bootstrap
-      - func: test-multiple-connections
+      - func: test-single-connection
         vars:
           e2e_test_groups: 3
           e2e_test_group: 1
           debug: compass-e2e-tests*,electron*,hadron*,mongo*
           mongodb_version: latest-enterprise
-  - name: e2e-multiple-connections-2
+  - name: e2e-single-connection-2
     tags:
       - required-for-publish
       - run-on-pr
@@ -360,13 +360,13 @@ tasks:
       - func: prepare
       - func: install
       - func: bootstrap
-      - func: test-multiple-connections
+      - func: test-single-connection
         vars:
           e2e_test_groups: 3
           e2e_test_group: 2
           debug: compass-e2e-tests*,electron*,hadron*,mongo*
           mongodb_version: latest-enterprise
-  - name: e2e-multiple-connections-3
+  - name: e2e-single-connection-3
     tags:
       - required-for-publish
       - run-on-pr
@@ -374,7 +374,7 @@ tasks:
       - func: prepare
       - func: install
       - func: bootstrap
-      - func: test-multiple-connections
+      - func: test-single-connection
         vars:
           e2e_test_groups: 3
           e2e_test_group: 3
