--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -301,12 +301,13 @@ functions:
         shell: bash
         env:
           <<: *compass-env
+          HADRON_DISTRIBUTION: ${compass_distribution}
         script: |
           set -e
           # Load environment variables
           eval $(.evergreen/print-compass-env.sh)
           # Generates and expansion file with build target metadata in packages/compass/expansions.yml
-          npm run --workspace mongodb-compass build-info -- ${target_platform} ${target_arch} --format=yaml --flatten ${compass_distribution} --out expansions.raw.yml
+          npm run --workspace mongodb-compass build-info -- ${target_platform} ${target_arch} --format=yaml --flatten --out expansions.raw.yml
           # the 'author' key conflicts with evergreen's own expansion
           grep -v '^author:' < packages/compass/expansions.raw.yml > packages/compass/expansions.yml
     - command: expansions.update
@@ -405,7 +406,7 @@ functions:
           <<: *compass-env
           DEBUG: ${debug}
           npm_config_loglevel: ${npm_loglevel}
-          COMPASS_DISTRIBUTION: ${compass_distribution}
+          HADRON_DISTRIBUTION: ${compass_distribution}
         script: |
           set -e
 
@@ -443,7 +444,7 @@ functions:
           <<: *compass-env
           DEBUG: ${debug}
           npm_config_loglevel: ${npm_loglevel}
-          COMPASS_DISTRIBUTION: ${compass_distribution}
+          HADRON_DISTRIBUTION: ${compass_distribution}
           SIGNING_SERVER_HOSTNAME: ${SIGNING_SERVER_HOSTNAME}
           SIGNING_SERVER_PRIVATE_KEY: ${SIGNING_SERVER_PRIVATE_KEY}
           SIGNING_SERVER_PRIVATE_KEY_CYGPATH: ${SIGNING_SERVER_PRIVATE_KEY_CYGPATH}
