--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -301,12 +301,13 @@ functions:
         shell: bash
         env:
           <<: *compass-env
+          HADRON_DISTRIBUTION: ${compass_distribution}
         script: |
           set -e
           # Load environment variables
           eval $(.evergreen/print-compass-env.sh)
           # Generates and expansion file with build target metadata in packages/compass/expansions.yml
-          npm run --workspace mongodb-compass build-info -- ${target_platform} ${target_arch} --format=yaml --flatten ${compass_distribution} --out expansions.raw.yml
+          npm run --workspace mongodb-compass build-info -- ${target_platform} ${target_arch} --format=yaml --flatten --out expansions.raw.yml
           # the 'author' key conflicts with evergreen's own expansion
           grep -v '^author:' < packages/compass/expansions.raw.yml > packages/compass/expansions.yml
     - command: expansions.update
@@ -405,7 +406,7 @@ functions:
           <<: *compass-env
           DEBUG: ${debug}
           npm_config_loglevel: ${npm_loglevel}
-          COMPASS_DISTRIBUTION: ${compass_distribution}
+          HADRON_DISTRIBUTION: ${compass_distribution}
         script: |
           set -e
 
@@ -443,7 +444,7 @@ functions:
           <<: *compass-env
           DEBUG: ${debug}
           npm_config_loglevel: ${npm_loglevel}
-          COMPASS_DISTRIBUTION: ${compass_distribution}
+          HADRON_DISTRIBUTION: ${compass_distribution}
           SIGNING_SERVER_HOSTNAME: ${SIGNING_SERVER_HOSTNAME}
           SIGNING_SERVER_PRIVATE_KEY: ${SIGNING_SERVER_PRIVATE_KEY}
           SIGNING_SERVER_PRIVATE_KEY_CYGPATH: ${SIGNING_SERVER_PRIVATE_KEY_CYGPATH}
@@ -586,6 +587,7 @@ functions:
           E2E_TEST_GROUPS: ${e2e_test_groups}
           E2E_TEST_GROUP: ${e2e_test_group}
           ATLAS_LOCAL_VERSION: latest
+          HADRON_DISTRIBUTION: compass
         script: |
           set -e
           # Load environment variables
@@ -614,6 +616,7 @@ functions:
           MONGODB_RUNNER_VERSION: ${mongodb_version|}
           E2E_TEST_GROUPS: ${e2e_test_groups}
           E2E_TEST_GROUP: ${e2e_test_group}
+          HADRON_DISTRIBUTION: compass
         script: |
           set -e
           # Load environment variables
@@ -622,7 +625,6 @@ functions:
           echo "Running E2E tests for multiple connections"
 
           npm run --unsafe-perm --workspace compass-e2e-tests test-ci -- -- --test-multiple-connections
-
 
   test-packaged-app:
     - command: shell.exec
@@ -946,6 +948,7 @@ functions:
           DEBUG: ${debug}
           SNYK_TOKEN: ${snyk_token}
           JIRA_API_TOKEN: ${jira_api_token}
+          HADRON_DISTRIBUTION: compass
         script: |
           set -e
           # Load environment variables
