--- a/packages/compass-field-store/package.json
+++ b/packages/compass-field-store/package.json
@@ -53,8 +53,6 @@
     "@mongodb-js/mocha-config-compass": "^1.3.10",
     "@mongodb-js/prettier-config-compass": "^1.0.2",
     "@mongodb-js/tsconfig-compass": "^1.0.4",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/react-hooks": "^7.0.2",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "@types/sinon-chai": "^3.2.5",
@@ -76,7 +74,8 @@
     "mongodb-schema": "^12.2.0",
     "react": "^17.0.2",
     "react-redux": "^8.1.3",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-thunk": "^3.1.0"
   },
   "is_compass_plugin": true
 }
