--- a/packages/compass-saved-aggregations-queries/tsconfig.json
+++ b/packages/compass-saved-aggregations-queries/tsconfig.json
@@ -5,5 +5,5 @@
     "lib": ["ES2020", "DOM"]
   },
   "include": ["src/**/*"],
-  "exclude": ["./src/**/*.spec.*"]
+  "exclude": ["./src/**/*.{spec,test}.*"]
 }
