--- a/packages/compass/package.json
+++ b/packages/compass/package.json
@@ -181,6 +181,7 @@
   },
   "dependencies": {
     "@mongosh/node-runtime-worker-thread": "^2.3.0",
+    "@mongodb-js/mongodb-downloader": "^0.3.5",
     "clipboard": "^2.0.6",
     "kerberos": "^2.1.1",
     "keytar": "^7.9.0",
