--- a/packages/connection-form/package.json
+++ b/packages/connection-form/package.json
@@ -53,6 +53,7 @@
     "@mongodb-js/connection-info": "^0.5.3",
     "@mongodb-js/shell-bson-parser": "^1.1.0",
     "compass-preferences-model": "^2.26.0",
+    "hadron-app-registry": "^9.2.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.8.0",
     "mongodb-build-info": "^1.7.2",
