chore(saved-aggregations-queries): fix ignore list in tsconfig

--- a/packages/compass-saved-aggregations-queries/tsconfig.json
+++ b/packages/compass-saved-aggregations-queries/tsconfig.json
@@ -5,5 +5,5 @@
     "lib": ["ES2020", "DOM"]
   },
   "include": ["src/**/*"],
-  "exclude": ["./src/**/*.{spec,test}.*"]
+  "exclude": ["./src/**/*.spec.*", "./src/**/*.test.*"]
 }
