--- a/packages/data-service/package.json
+++ b/packages/data-service/package.json
@@ -54,8 +54,9 @@
     "@mongodb-js/compass-logging": "^1.4.3",
     "@mongodb-js/compass-utils": "^0.6.9",
     "@mongodb-js/devtools-connect": "^3.2.5",
-    "@mongodb-js/ssh-tunnel": "^2.3.3",
+    "@mongodb-js/devtools-proxy-support": "^0.3.6",
     "bson": "^6.7.0",
+    "compass-preferences-model": "^2.26.0",
     "lodash": "^4.17.21",
     "mongodb": "^6.8.0",
     "mongodb-build-info": "^1.7.2",
@@ -64,7 +65,7 @@
   },
   "devDependencies": {
     "@mongodb-js/compass-test-server": "^0.1.19",
-    "@mongodb-js/devtools-docker-test-envs": "^1.3.2",
+    "@mongodb-js/devtools-docker-test-envs": "^1.3.3",
     "@mongodb-js/eslint-config-compass": "^1.1.4",
     "@mongodb-js/mocha-config-compass": "^1.3.10",
     "@mongodb-js/oidc-plugin": "^1.1.1",
