--- a/.github/workflows/authors-and-third-party-notices.yaml
+++ b/.github/workflows/authors-and-third-party-notices.yaml
@@ -12,6 +12,8 @@ jobs:
   update_generated_files:
     name: Update automatically generated files
     runs-on: ubuntu-latest
+    env:
+      HADRON_DISTRIBUTION: compass
     steps:
       - uses: actions/checkout@v3
         with:
