--- a/packages/data-service/package.json
+++ b/packages/data-service/package.json
@@ -87,6 +87,6 @@
     "typescript": "^5.0.4"
   },
   "optionalDependencies": {
-    "mongodb-client-encryption": "~6.0.1"
+    "mongodb-client-encryption": "^6.1.0"
   }
 }
